--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,19 @@
 
 .header{
+    display: flex;
+    flex-direction: column;
+    height: 170px;
+
+}
+.banner{
     height:130px;
+    width: 100%;
     background-color: rgb(34,80,62);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
 }
-.header a{
+.banner a{
     color: white;
     font-size: 0,9rem;
     text-decoration: none;
@@ -65,5 +71,30 @@
     color: rgba(255, 255, 255, 0.7);
 
 }
+.header_nav{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 14px;
+    background-color:whitesmoke ;
+    margin-left: 10px;
+}
+.navbar{
+    width: 70%;
+    height: 100%;
+}
+.navbar a{
+    text-decoration: none;
+    color: black;
+    font-family:Arial, Helvetica, sans-serif;
+    transition: all 0.1s ease;
+    
 
+}
+.navbar a:hover{
+    font-size: larger;
+    color: rgba(0, 0, 0, 0.6);
+    
+}
 
