--- a/css/header.css
+++ b/css/header.css
@@ -2,11 +2,30 @@
 .header{
     display: flex;
     flex-direction: column;
-    height: 170px;
+    height: 190px;
 
 }
+.search{
+    width: 340px;
+    align-items: center;
+    display: flex;
+}
+.search input{
+    margin: 0;
+    border-radius: 5px 0px 0px 5px;
+    padding-left: 8px;
+    
+}
+.search button{
+    cursor: pointer;
+    border: 0px;
+    width: 80px;
+    height: 50px;
+    border-radius: 0px 5px 5px 0px;
+    background-color: white;
+}
 .banner{
-    height:130px;
+    height:90%;
     width: 100%;
     background-color: rgb(34,80,62);
     display: flex;
@@ -15,7 +34,7 @@
 }
 .banner a{
     color: white;
-    font-size: 0,9rem;
+    
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -24,21 +43,12 @@
 }
 
 .header_navbar_col_search input{
-    width: 250px;
-    height: 40px;
-    border-radius: 5px;
-    border: 1px solid white ;
+    width: 300px;
+    height: 50px;
+    border: 0px;
     outline: none;
 }
-.header_navbar_col_search button{
-    cursor: pointer;
-    border: 1px solid;
-    width: 40px;
-    height: 40px;
-    border-radius: 5px;
-    background-color: white;
-    padding: 0px;
-}
+
 .header_navbar_logo{
     width: 370px;
     height: 100px;
@@ -51,32 +61,31 @@
     height: 100px;
 }
 .header_navbar_login{
-    width: 200px;
+    width: 240px;
     border-right: 1px solid white;
 }
 .header_navbar_hidden{
     display: flex;
     justify-content: space-around;
-    width: 300px;
+    width: 350px;
 }
 .header_navbar_loginbutton p,
-.header_navbar_loginbutton small{
-    font-size: 1rem;
+.header_navbar_loginbutton small,
+.header_navbar_login a{
+    font-size: 20px;
     color:white; 
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 .header_navbar_hidden a:hover{
     color: rgba(255, 255, 255, 0.7);
 
 }
 .header_nav{
     width: 100%;
-    height: 40px;
+    height: 50px;
     display: flex;
     justify-content: space-around;
-    font-size: 14px;
     background-color:whitesmoke ;
     margin-left: 10px;
 }
@@ -84,17 +93,75 @@
     width: 70%;
     height: 100%;
 }
+.navbar li{
+    list-style: none;
+    font-size: 20px;
+
+}
 .navbar a{
     text-decoration: none;
     color: black;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Petrona, sans-serif;
     transition: all 0.1s ease;
-    
-
 }
 .navbar a:hover{
     font-size: larger;
     color: rgba(0, 0, 0, 0.6);
     
 }
+
+.navitem {
+    position: relative;
+}
+.navitem:hover .subnav{
+    display: grid;
+}
+
+.subnav{
+    border-radius: 0px 8px 8px 8px;
+    border: 0px;
+    position: absolute;
+    gap: 20px;
+    width: 960px;
+    display: none;
+    grid-template-columns: 25% 25% 25% 25%;
+    background-color: whitesmoke;
+    animation: subnav ease 0.4s forwards;
+
+}
+.subnav > div { 
+    margin: 0px;
+    padding: 25px;
+}
+#nuochoa{
+    width: 250px;
+    grid-template-columns: 100%;
+    justify-content: space-around;
+}
+
+.navitem::after {
+    content: '';
+    display: block;
+    position: absolute;
+    background-color: transparent;
+    width: 200px;
+    height: 40px;
+}
+@keyframes subnav{
+    from {
+        top:20px;
+        opacity:0;
+    } 
+    to {
+        top:50px;
+    }
+}
+
+@font-face {
+    font-family: 'Petrona'; 
+    src: url('/fonts/Petrona-VariableFont_wght.ttf'); 
+}
+  
+
+  
 
