--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,13 @@
 @import url(/css/footer.css);
 @import url(/lib/fontawesome-free-6.3.0-web/css/all.min.css);
 @import url(/lib/bootstrap-5.3.0-alpha1/dist/css/bootstrap.min.css);
+@import url(/css/navbar.css);
 
 *{
     box-sizing: border-box;
     margin: auto;
+}
+#myCarousel img{
+    object-fit: cover;
+    z-index: -1;
 }
