--- a/css/chiTietSanPham.css
+++ b/css/chiTietSanPham.css
@@ -113,7 +113,9 @@ table {
     margin-top: 20px;
     width: 380px;
     height: 400px;
+    object-fit: cover;
 }
+
 .item-img{
     border: 1px solid rgb(34,80,62);
     width: 100%;
