--- a/css/header.css
+++ b/css/header.css
@@ -81,6 +81,26 @@
     color: rgba(255, 255, 255, 0.7);
 
 }
+.header_navbar_cart{
+    position: relative;
+}
+.header_navbar_cart:hover .subcart{
+    display: block;
+}
+.header_navbar_cart .subcart{
+    position: absolute;
+    background-color: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-shadow: 1px 1px 1px rgba(76, 75, 75, 0.6) ;
+    width: 350px;
+    right: 0;
+    border-radius: 5px;
+    display: none;
+    animation: subnav ease 0.4s forwards;
+    padding-top: 10px;
+    padding-left: 10px;
+    z-index: 100;
+}
 .header_nav{
     width: 100%;
     height: 50px;
@@ -156,6 +176,7 @@
         top:50px;
     }
 }
+
 
 @font-face {
     font-family: 'Petrona'; 
