--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,9 @@
-@import url(/css/header.css);
-@import url(/css/footer.css);
-@import url(/lib/fontawesome-free-6.3.0-web/css/all.min.css);
-@import url(/lib/bootstrap-5.3.0-alpha1/dist/css/bootstrap.min.css);
-@import url(/css/sanpham.css);
-@import url(/css/chiTietSanPham.css);
+@import url(../css/header.css);
+@import url(../css/footer.css);
+@import url(../lib/fontawesome-free-6.3.0-web/css/all.min.css);
+@import url(../lib/bootstrap-5.3.0-alpha1/dist/css/bootstrap.min.css);
+@import url(../css/sanpham.css);
+@import url(../css/chiTietSanPham.css);
 
 
 *{
