--- a/css/sanpham.css
+++ b/css/sanpham.css
@@ -33,6 +33,14 @@
     margin-top: 40px;
     margin-bottom: 40px;
 }
+.list-banner{
+    width: 100%;
+    grid-column: 1/5;
+}
+.list-banner img{
+    width: 100%;
+}
+
 .dssanpham a:hover img{
     transform: scale(1.1); 
 }
