--- a/css/header.css
+++ b/css/header.css
@@ -181,7 +181,7 @@
 
 @font-face {
     font-family: 'Petrona'; 
-    src: url('/fonts/Petrona-VariableFont_wght.ttf'); 
+    src: url('../fonts/Petrona-VariableFont_wght.ttf'); 
 }
   
 
